--- a/index.html
+++ b/index.html
@@ -3,24 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"
     <title>Document</title>
 </head>
 <body>
- <div class="title"><h1>Portfolio Théo Dussart</h1>
-    </div>
-<div class="sommaire">
-    <h3><a href="tp gneral/index.html">Liste des TP</h3>
-    <h3><a href="Missions genral/index.html">Liste des Missions</a></h3>
-    <h3><a href="easy-php/index.html">Projet PHP</a></h3>
-    <h3><a href="certif/index.html">Certification</a></h3>
-
-
-
-
-    </div>
-
-
-
+    <section class="mission-section">
+        <h2>Missions</h2>
+        <div class="link-container">
+            <h3><a href="Mission1/index.html">Mission1</a></h3>
+            <h3><a href="Mission2/index.html">Mission2</a></h3>
+            <h3><a href="Mission4/index.html">Mission3</a></h3>
+            <h3><a href="Mission5/index.html">Mission4</a></h3>
+            <h3><a href="Mission6/index.html">Mission5</a></h3>
+            <h3><a href="Mission7/index.html">Mission6</a></h3>
+            <h3><a href="Mission8/index.html">Mission7</a></h3>
+        </div>
+    </section>
+<a href="../index.html">Retour au sommaire</a>
 </body>
 </html>
